# Studia

./: .gitignore  LICENSE  exp.py  nifs
1_sem/C_language/Lista 10/: a.out  costam  costam.c  dane_z_pliku  dane_z_pliku.c  spraw2  sprawdzaczka  sprawdzaczka.c  test  test.c  wskaźniki  wskaźniki.c
1_sem/C_language/Lista 8/: sprawdzaczka.c  tempCodeRunnerFile.c  tescik  tescik.c  tesciorororor.cpp
1_sem/C_language/lista 9/: atraktor  atraktor.c  cos  cos.c  kopia_mapa.c  mapa_skarbów  tempCodeRunnerFile  tempCodeRunnerFile.c  test  wskaźniki  wskaźniki.c  wspolrzedne_geo.c  zliczacz
1_sem/C_language/listy_w_c/: listy  listy_2  listy_2.c  listy_3.c  tescik  tescik.c
1_sem/Lista 10/: Dane_geograficzne  tempCodeRunnerFile.c
1_sem/Lista 8/: sprawdzaczka  tesciorororor
1_sem/Programowanie obiektowe/: tempCodeRunnerFile.c
1_sem/lista 9/: kopia_mapa  mapa_skarbów.c  wspolrzedne_geo  zliczacz.c
1_sem/listy_w_c/: a.out  listy.c  listy_3
2_sem/Metody programowania/: costam.rkt  powtórka.rkt  powtórka_1.rkt
2_sem/Mikol_c/: test.c
3_sem/Analiza Numeryczna/Project/polynomial_edytor/: pyproject.toml
3_sem/Analiza Numeryczna/Project/polynomial_edytor/tests/: test_polynomial_edytor.py
3_sem/MDL/: z2.py
3_sem/Python-2023/Listy11-15/book-management/: Readme  pyproject.toml
3_sem/Python-2023/Listy11-15/book-management/project/: urls.py
4_sem/Rpis/: notes.md
5_sem/: my_query.sql
5_sem/Design_of_db_apps/: Lab_8-12.7z
5_sem/Language_models/: arithmetic_data.txt
5_sem/Machine_Learning/: questions.md
others/: eduroam-linux-Uniwersytet_Wroclawski.py
(+631 files in other folders)
