[tool.poetry]
name = "polynomial_edytor"
version = "0.1.0"
description = ""
authors = ["Mikolkar <mikolaj.karapka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
PyQt6 = "^6.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
