[tool.poetry]
name = "book-management"
version = "0.1.0"
description = "Simple book management program"
authors = ["Mikolkar <mikolaj.karapka@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.1"
djangorestframework = "^3.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
